# heroforge-documind

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: .gitkeep
.claude/skills/: .gitkeep
.claude/subagents/: .gitkeep
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: evaluate.yml  tests.yml
data/: evaluation_dataset.json
docs/claude-conversations/: claude-convo-2025-12-05-1.md  claude-convo-2025-12-05-2.md  claude-convo-2025-12-05-3.md  claude-convo-2025-12-05-4.md  claude-convo-2025-12-05-5.md  claude-convo-2025-12-06-1.md
docs/guides/: FAQ.md  SETUP.md  TROUBLESHOOTING.md
docs/plans/: pipeline-components-plan_own.md  pipeline-enhanced-embedder-plan.md
docs/reports/: pipeline-run-20251216-032137.json  pipeline-run-20251216-032628.json
docs/spec/: documind-prd.md
docs/workshops/: 1-Workshop-SOP.md  S10-Workshop.md  S3-Workshop.md  S4-Workshop.md  S5-Workshop.md  S6-demo.sql  S8-Workshop.md  S9-Workshop.md
results/: ab_test_results.json  bad_results.json  evaluation_results.json
scripts/: ab_test.py  monitor_queries.py  run_evaluation.py
src/: app.py
src/documind/: README.md  __init__.py  config.py  intelligent_qa.py  search_api.py  upload_handler.py
src/documind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: prompt_regression_tests.json  test_prompt_regression.py  test_rag_integration.py  test_search_queries.py
tests/e2e/: .gitkeep
(+34 files in other folders)
